<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_founded"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.teams.TeamDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_team_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/purple_500"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:titleMargins="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Arsenal"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_team_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/teamicon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/club_details"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/founded"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:text="text_founded"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:text="Nickname: "
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/text_nickname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:text="text_nickname"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:text="Address: "
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/text_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:text="text_address"
                        app:layout_constraintEnd_toEndOf="@+id/text_nickname"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/text_nickname" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/lato"
                        android:text="Phone Number: "
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:text="text_phone"
                        app:layout_constraintEnd_toEndOf="@+id/text_address"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/text_address" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:text="Website: "
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/text_website"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:text="text_website"
                        app:layout_constraintEnd_toEndOf="@+id/text_phone"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:text="Email Address: "
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <TextView
                        android:id="@+id/text_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="8dp"
                        android:text="text_email"
                        app:layout_constraintEnd_toEndOf="@+id/text_website"
                        app:layout_constraintStart_toEndOf="@+id/textView12"
                        app:layout_constraintTop_toBottomOf="@+id/text_website" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:text="Club Colors: "
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView12"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/lato"
                        android:paddingStart="16dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="@+id/text_email"
                        app:layout_constraintStart_toEndOf="@+id/textView14"
                        app:layout_constraintTop_toBottomOf="@+id/text_email" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/teamplayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Team Players"
                android:fontFamily="@font/lato"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/cardview"
                app:layout_constraintStart_toStartOf="@+id/cardview"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/teams_recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:listitem="@layout/teams_listitem"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teamplayers" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>