<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.competitions.CompetitionsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_competition_activity"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        android:textAlignment="center"
        app:titleTextColor="@color/white"
        app:title="Competitions"
        app:titleMargin="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/competition_recyclerView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:clipToPadding="false"
        android:padding="4dp"
        tools:listitem="@layout/competition_listitem"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        tools:text="Error message"
        tools:visibility="visible" />


</RelativeLayout>